$Id: History,v 1.54 2000-08-02 10:52:29 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

August 02, 2000 G.Cosmo (global-V02-00-02)
- Added <queue> wrapper in management/g4std.
- Added inclusion of new CLHEP random distributions in
  HEPRandom/include/Randomize.hh pending update of Randomize.h in CLHEP.

July 22, 2000 M.Asai (global-V02-00-01)
- Move G4VStateDependent and G4StateManager classes into global/management
  from intercoms.
- "Abort" state is added to G4ApplicationState.
- Modify G4Exception to change Geant4 status to "Abort".
- Fix a bug of "double deleting" in the destructor of G4StateManager.

July 21, 2000 G.Cosmo (global-V02-00-00)
- STLInterface/cstring.icc: extended buffer for G4String::readLine from
  256 to 1024 characters.

June 26, 2000 G.Cosmo (global-V01-01-05)
- Fixes for problem report #104, STLInterface:
  o defs.h: defined G4RWTHROW(a) to abort() in case G4NO_STD_EXCEPTIONS
    is set.
  o tpsrtvec.icc, tvordvec.icc: corrected implementation of last() in case
    of call to G4RWTHROW(a).
  o cstring.icc: defined function G4String::strcasecompare(a,b) which will
    NOT invoke the non-ANSI function strcasecmp(a,b) when G4USE_STD_NAMESPACE
    is set.